--- a/source/_posts/2014-03-05-netcat.md
+++ b/source/_posts/2014-03-05-netcat.md
@@ -3,6 +3,7 @@ layout: post
 date: 2014-03-05
 title: Netcat Refresher
 categories: hacking reference linux sysadmin
+comments: true
 ---
 
 *Quick overview of the legendary Unix tool, netcat, with examples and applications*
