--- a/source/_posts/2014-09-11-csrf-news.md
+++ b/source/_posts/2014-09-11-csrf-news.md
@@ -3,6 +3,7 @@ layout: post
 date: 2014-09-11
 title: Abusing Admin Privileges via CSRF
 categories: web security hacking
+comments: true
 ---
 
 *Exploiting a classic CSRF vulnerability*
