--- a/source/_posts/2014-09-27-suctf_re.md
+++ b/source/_posts/2014-09-27-suctf_re.md
@@ -3,6 +3,7 @@ layout: post
 date: 2014-09-27
 title: SU-CTF 2014 - "Commerical Application!"
 categories: [ctf ,hacking ,reverse engineering, android]
+comments: true
 ---
 
 This weekend I decided to try playing [SU-CTF](https://ctftime.org/event/159).
