--- a/source/_posts/2014-10-25-crackme.md
+++ b/source/_posts/2014-10-25-crackme.md
@@ -3,6 +3,7 @@ layout: post
 date: 2014-10-27
 title: Beginner Crackme
 categories: [ctf ,reverse engineering, assembly ,hacking ,security]
+comments: true
 ---
 
 As part of an Intro to Security course I'm taking, my professor gave us
